--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.exe,*.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
